# wallpaper-generator

./: LICENSE  README.md  pyproject.toml  streamlit_app.py
src/genwallpaper/: __init__.py  __main__.py  generator.py  streamlit_app.py
